# agent-workflow

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.task-plans/: agent-workflow-plan.md
backend/: pyproject.toml
backend/agent_workflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: main.py
backend/src/api/: config.py  executions.py  workflows.py  ws.py
backend/src/core/: config_merger.py  executor.py  output_handler.py  pipeline.py  template.py
backend/src/mcp/: manager.py
backend/src/scheduler/: cron_manager.py
backend/src/skills/: loader.py
backend/src/store/: database.py  models.py  schemas.py
backend/tests/: conftest.py  test_api_executions.py  test_api_workflows.py  test_config_merger.py  test_pipeline.py  test_template.py
doc/: claude-agent-sdk-typescript-guide.md  mcp-skills-config-design.md  python-to-nodejs-migration.md
docs/: startup-guide.md  tasklist.md  tech-spec.md
electron-app/: README.md  electron-builder.json  tsconfig.json  tsconfig.main.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
global_config/mcp/: servers.yaml
src/: env.d.ts
test/: api-adapters.test.ts  cancellation-registry.test.ts  configMerger.test.ts  contract.test.ts  domain-models.test.ts  executor.test.ts  ipc-validation.test.ts  pipeline.test.ts  rule-validator.test.ts  safeJson.test.ts  template.test.ts  test-config.ts  test-core.ts  test-pipeline.ts
(+169 files in other folders)
